@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+Maintenance:
+* Fix memory leaks when a python script calls orthanc.RestApiPost() and sibling methods
 * New builders for Windows: Supporting 32 / 64bit with Python 3.9 / 3.10 / 3.11
 
 
